<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/u_my_events_menu_item"
        android:icon="@drawable/nav_ic_calendar"
        android:title=""/>


    <item
        android:id="@+id/u_scanQR_menu_item"
        android:icon="@drawable/nav_ic_barcode"
        android:title=""/>

    <item
        android:id="@+id/u_profile_menu_item"
        android:icon="@drawable/nav_ic_user"
        android:title=""/>

</menu>
