...
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/u_event_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
...
