...
        <TextView
            android:id="@+id/o_view_events_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_bold"
            android:paddingTop="10dp"
            android:text="My Events"
            android:textColor="@color/dark_purple"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

...
