...
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="My Profile"
        android:textAlignment="textStart"
        android:textColor="@color/dark_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
...
